--- a/src/app/pages/payment-details-add/payment-details-add.page.scss
+++ b/src/app/pages/payment-details-add/payment-details-add.page.scss
@@ -6,6 +6,13 @@ body {
     box-sizing: border-box;
 }
 
+.validation-errors {
+    color: red;
+    font-size: 14px;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
 .input-container {
     display: -ms-flexbox;
     /* IE10 */
@@ -18,7 +25,7 @@ body {
     padding: 10px;
     background: black;
     color: white;
-    min-width: 50px;
+    min-width: 20px;
     text-align: center;
 }
 
