clone whole project

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,11 @@
 <ion-header>
-    <ion-toolbar>
-        <ion-buttons slot="start">
-            <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-        <ion-title>
-            Home
-        </ion-title>
-    </ion-toolbar>
+  <ion-toolbar>
+    <ion-title>
+      Select Toll Gate
+    </ion-title>
+  </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    <ion-button color="primary" routerLink="/select-toll-plaza">Click Me</ion-button>
+<ion-content padding>
+  <div id="map_canvas"></div>
 </ion-content>
