--- a/src/app/pages/confirm-payment/confirm-payment.page.html
+++ b/src/app/pages/confirm-payment/confirm-payment.page.html
@@ -22,7 +22,7 @@
   </table>
 
   <br /><br />
-  <table style="border: 1px solid black">
+  <table style="border: 1px solid black; float:left; ">
     <tr>
       <td>
         <ion-label>
@@ -41,21 +41,38 @@
         </ion-label>
       </td>
     </tr>
-    <tr>
+  </table>
+  <table border="2px">
+    <tr><th>Sr.No </th><th>Highway Name</th><th>City Name</th><th>Emergency No</th><th>Amount</th><th>Toll Name</th></tr>
+    <tr *ngFor="let item of final_arr_transaction">
       <td>
-        <ol>
-          <li *ngFor="let item of tollPlazas">{{ item.highway_name }}</li>
-          <li *ngFor="let item of amounts">{{ item }}</li>
-        </ol>
-        <!-- <ion-label>
-          {{ item.highway_name }}
-        </ion-label> -->
+        {{ item.SrNo }}
+      </td>
+      <td>
+        {{ item.highway_name }}
+      </td>
+      <td>
+        {{ item.city }}
+      </td>
+      <td>
+        {{ item.emergency_no }}
+      </td>
+      <td>
+        {{ item.amount }}
+      </td>
+      <td>
+        {{ item.toll_name }}
       </td>
     </tr>
     <tr>
       <td>
         <ion-label style="float:right">
-          <b> Total Amount :- {{ amt | currency: "INR" }}</b>
+          <b> Total Amount :- </b>
+        </ion-label>
+      </td>
+      <td>
+        <ion-label>
+          <b>{{ amt | currency: "INR" }}</b>
         </ion-label>
       </td>
     </tr>
@@ -83,18 +100,18 @@
               pattern="[0-9]{3}"
               placeholder="Enter CVV"
               title="Only three Digit allow"
-            ></ion-input>
+              (ionBlur)="inputBoxIfwrite()"
+            >
+            </ion-input>
 
-            
-          
             <ion-icon name="help-circle"></ion-icon>
-        
           </ion-item>
         </div>
       </div>
     </ion-list>
   </table>
   <ion-button
+    [disabled]="!buttonDisabled"
     expand="block"
     style="width:100%;  margin-bottom: -20px"
     (click)="transaction()"
