transaction with otp

--- a/src/app/pages/confirm-payment/confirm-payment.page.html
+++ b/src/app/pages/confirm-payment/confirm-payment.page.html
@@ -104,7 +104,7 @@
             >
             </ion-input>
 
-            <ion-icon name="help-circle"></ion-icon>
+           <img src="../../../assets/icon/cvv.jpg" alt="" width=20%>
           </ion-item>
         </div>
       </div>
