--- a/src/app/login/signup/signup.page.html
+++ b/src/app/login/signup/signup.page.html
@@ -9,6 +9,15 @@
 </ion-header>
 
 <ion-content padding>
+    <img src="../../assets/logoEToll.png" style="align-items: center;
+    height: 150px;
+    width: 150px;
+    margin-left: 20%;
+    margin-bottom: -20%;
+    margin-top: 5%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;">
     <form [formGroup]="myform">
         <br><br><br>
         <ion-list>
@@ -44,7 +53,7 @@
             <br>
             <div *ngIf="!myform.controls.password1.valid &&
       myform.controls.password1.dirty" style="color:red;">
-                
+
                 -> Minmum 6 Charactor
                 <br>->One Special Charactor
                 <br>->One Digit
