--- a/src/app/pages/forgetpassword/forgetpassword.page.html
+++ b/src/app/pages/forgetpassword/forgetpassword.page.html
@@ -1,16 +1,21 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>forgetpassword</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="login"></ion-back-button>
+        </ion-buttons>
+        <ion-title>Forget Password</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-item>
-      <ion-input type="email" placeholder="Enter a Registed Mail" [(ngModel)]="email">
-
-      </ion-input>
-      <ion-button (click)="send()">
-          Send
-      </ion-button>
-  </ion-item>
+    <form [formGroup]="forgetForm">
+        <ion-item>
+            <ion-input type="email" formControlName="email" required placeholder="Enter a Registed Mail" [(ngModel)]="email">
+            </ion-input>
+            <ion-button (click)="send()" [disabled]="!forgetForm.valid">
+                Send
+                <ion-icon name="paper-plane"></ion-icon>
+            </ion-button>
+        </ion-item>
+    </form>
 </ion-content>
