Change Password issue solved

--- a/src/app/changepassword/changepassword.page.html
+++ b/src/app/changepassword/changepassword.page.html
@@ -9,17 +9,42 @@
         <ion-item>
           <ion-label position="floating">Old Password:</ion-label>
           <ion-input formControlName="oldpass" id="oldpass" type="text" [(ngModel)]="oldpass"></ion-input>
-        </ion-item>
+        </ion-item><br>
+        <div *ngIf="!myform.controls.oldpass.valid &&
+        myform.controls.oldpass.dirty" style="color:red;">
+                  Please Enter a Valid Password
+                  <br>Minmum 6 Charactor
+                  <br>One Special Charactor
+                  <br>One Digit
+        </div>
         <ion-item>
           <ion-label position="floating">New Password:</ion-label>
           <ion-input formControlName="newpass" id="newpass" type="text" [(ngModel)]="newpass"></ion-input>
         </ion-item>
+        <div *ngIf="!myform.controls.newpass.valid &&
+        myform.controls.newpass.dirty" style="color:red;">
+                  Please Enter a Valid Password
+                  <br>Minmum 6 Charactor
+                  <br>One Special Charactor
+                  <br>One Digit
+        </div>
         <ion-item>
           <ion-label position="floating">Confirm Password:</ion-label>
           <ion-input formControlName="confpass" id="confpass" type="text" [(ngModel)]="confpass"></ion-input>
         </ion-item>
-        <ion-button expand="block" color="primary" (click)="ChangePassword()">
-          Save Changes
+        <div *ngIf="!myform.controls.confpass.valid &&
+        myform.controls.confpass.dirty" style="color:red;">
+                  Please Enter a Valid Password
+                  <br>Minmum 6 Charactor
+                  <br>One Special Charactor
+                  <br>One Digit
+        </div>
+        <div *ngIf="!(myform.controls.newpass.value == myform.controls.confpass.value)"  
+        style="color:red;">
+                  Password Do Not Match
+        </div>
+        <ion-button expand="block" color="primary" (click)="ChangePassword()" style="position:absolute; bottom: 5%; width:97%; left: 1%">
+          <ion-icon name="lock"></ion-icon> &nbsp; Save Changes
         </ion-button>
       </form>
 </ion-content>
