--- a/src/app/pages/payment-details/payment-details.page.scss
+++ b/src/app/pages/payment-details/payment-details.page.scss
@@ -1,6 +1,10 @@
 ion-card {
     display: flex;
     flex-direction: column;
-    width: 100% !important;
-    margin: 0 15px 0 5px;
+    width: 160% !important;
+    margin: 0 20px 0 0px;
+}
+
+td{
+    width:10%;
 }
