--- a/src/app/pages/transaction-failed/transaction-failed.page.html
+++ b/src/app/pages/transaction-failed/transaction-failed.page.html
@@ -10,12 +10,14 @@
 
 <ion-content padding>
 
-    <ion-card >
+    <ion-card>
         <ion-card-header>
-            <ion-icon name="close" style="font-size:80px;margin-left:70px;"></ion-icon>
+            <div style="display: flex;justify-content: center;">
+            <ion-icon name="close" style="font-size:80px;color:red"></ion-icon>
+        </div>
         </ion-card-header>
 
-        <ion-card-content style="margin-left:20px;">
+        <ion-card-content style="text-align: center">
             Transaction Failed.
         </ion-card-content>
     </ion-card>
