--- a/src/app/pages/transection-status/transection-status.page.html
+++ b/src/app/pages/transection-status/transection-status.page.html
@@ -12,12 +12,14 @@
 
     <ion-card >
         <ion-card-header>
-
-            <ion-icon name="checkmark-circle" style="font-size:80px;margin-left:70px;"></ion-icon>
+                <div style="display: flex;justify-content: center;">
+            <ion-icon name="checkmark-circle" style="font-size:80px;margin:0 auto;color:green"></ion-icon>
+            </div>
         </ion-card-header>
 
-        <ion-card-content style="margin-left:20px;">
-            Transaction successfully done.
+        <ion-card-content style="text-align:center">
+            Transaction successfully done.<br>
+            Receipt has been mailed to you.
         </ion-card-content>
     </ion-card>
 </ion-content>
