--- a/src/app/pages/confirm-payment/confirm-payment.page.html
+++ b/src/app/pages/confirm-payment/confirm-payment.page.html
@@ -33,7 +33,7 @@
     <tr>
       <td>
         <ion-label>
-          <b> Jounrey Type :- {{ whichj }}</b>
+          <b> Journey Type :- {{ whichj }}</b>
         </ion-label>
         <br />
         <ion-label *ngFor="let item of vehicletype" style="float:left">
