--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,5 +10,37 @@
 </ion-header>
 
 <ion-content padding>
-    <div id="map_canvas"></div>
+    <ion-segment [(ngModel)]="segme" (ionChange)="segmentChanged($event)">
+        <ion-segment-button value="map">
+            <ion-label>Map</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="cities">
+            <ion-label>Select Cities</ion-label>
+        </ion-segment-button>
+    </ion-segment>
+
+    <div [ngSwitch]="segme">
+        <div *ngSwitchCase="'map'">
+            <div id="map_canvas"></div>
+        </div>
+        <div *ngSwitchCase="'cities'">
+
+            <ion-item>
+                <ion-label>Source City</ion-label>
+                <ionic-selectable [(ngModel)]="sourceCity" [isMultiple]="false" [items]="cities" itemValueField="city1" itemTextField="city1" [canSearch]="true" (onChange)="cityChangeSource($event)">
+                </ionic-selectable>
+            </ion-item>
+
+            <ion-item>
+                <ion-label>Destination City</ion-label>
+                <ionic-selectable [(ngModel)]="destinationCity" [isMultiple]="false" [items]="cities" itemValueField="city1" itemTextField="city1" [canSearch]="true" (onChange)="cityChangeDest($event)">
+                </ionic-selectable>
+            </ion-item>
+
+            <ion-button [disabled]="flagBut" (click)="onTollButton()" expand="full">
+                Get Tolls List
+            </ion-button>
+        </div>
+    </div>
+
 </ion-content>
