--- a/src/app/pages/transection-status/transection-status.page.html
+++ b/src/app/pages/transection-status/transection-status.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-buttons slot="start">
-            <ion-back-button defaultHref="payment-details-add"></ion-back-button>
+            <ion-back-button defaultHref="home"></ion-back-button>
         </ion-buttons>
         <ion-title>Transaction Status</ion-title>
     </ion-toolbar>
@@ -10,16 +10,15 @@
 
 <ion-content padding>
 
-    <ion-card >
+    <ion-card>
         <ion-card-header>
-                <div style="display: flex;justify-content: center;">
-            <ion-icon name="checkmark-circle" style="font-size:80px;margin:0 auto;color:green"></ion-icon>
+            <div style="display: flex;justify-content: center;">
+                <ion-icon name="checkmark-circle" style="font-size:80px;margin:0 auto;color:green"></ion-icon>
             </div>
         </ion-card-header>
 
         <ion-card-content style="text-align:center">
-            Transaction successfully done.<br>
-            Receipt has been mailed to you.
+            Transaction successfully done.<br> Receipt has been mailed to you.
         </ion-card-content>
     </ion-card>
 </ion-content>
