--- a/src/app/pages/transaction-failed/transaction-failed.page.html
+++ b/src/app/pages/transaction-failed/transaction-failed.page.html
@@ -1,11 +1,11 @@
 <ion-header>
-  <ion-toolbar>
-      <ion-buttons slot="start">
-          <ion-back-button defaultHref="payment-details-add"></ion-back-button>
-      </ion-buttons>
-     
-      <ion-title>Transaction Status</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="home"></ion-back-button>
+        </ion-buttons>
+
+        <ion-title>Transaction Status</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
@@ -13,8 +13,8 @@
     <ion-card>
         <ion-card-header>
             <div style="display: flex;justify-content: center;">
-            <ion-icon name="close" style="font-size:80px;color:red"></ion-icon>
-        </div>
+                <ion-icon name="close" style="font-size:80px;color:red"></ion-icon>
+            </div>
         </ion-card-header>
 
         <ion-card-content style="text-align: center">
