signup button color changes, menu control disabled on some pages

--- a/src/app/login/signup/signup.page.html
+++ b/src/app/login/signup/signup.page.html
@@ -70,7 +70,7 @@
                 Please Enter Number Only
             </div>
         </ion-list>
-        <ion-button expand="full" color="tertiary" [disabled]="!myform.valid" (click)="onsignup()">Create Account
+        <ion-button expand="full" [disabled]="!myform.valid" (click)="onsignup()">Create Account
             <ion-icon slot="end" name="arrow-round-forward"></ion-icon>
         </ion-button>
     </form>
