vehicles and cards condition checked

--- a/src/app/pages/view-payment-method/view-payment-method.page.html
+++ b/src/app/pages/view-payment-method/view-payment-method.page.html
@@ -9,8 +9,9 @@
 </ion-header>
 
 <ion-content padding>
+
     <ion-item [hidden]="!showList">
-        <ion-label>Please add a new Vehicle!</ion-label>
+        <ion-label>Please add a new Card!</ion-label>
     </ion-item>
     <ion-list [hidden]="showList">
         <ion-list-header>
