--- a/src/app/my-vehicles/add-vehicle-model/add-vehicle-model.page.html
+++ b/src/app/my-vehicles/add-vehicle-model/add-vehicle-model.page.html
@@ -5,7 +5,7 @@
         </ion-buttons>
         <ion-title>Add Vehicle</ion-title>
         <ion-buttons slot="end" type="submit">
-            <button color="success" type="submit" aria-disabled="!add_vehicle_form.valid" (click)="done()"><span
+            <button color="success" type="submit" [disabled]="!add_vehicle_form.valid" (click)="done()"><span
           style="color: green; font-size:20px">Done</span></button>
             <!-- <ion-text (click)="done()" color="success">Done</ion-text> -->
         </ion-buttons>
